[package]
name = "aerosol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2"
nb = "1"
cortex-m = "0.7"
cortex-m-rt = "0.7"
# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
panic-halt = "0.2"
cortex-m-rtic = "1.0"
stm32f4xx-hal = { version = "0.13", features = ["rt", "stm32f405", "usb_fs","rtic-monotonic"] }
usb-device = "0.2.8"
usbd-serial = "0.1.0"
alloc-cortex-m = "0.4.1"
arrayvec = { version = "0.7.2", default-features = false }
max31855 = "0.1.0"
systick-monotonic = "1.0.0"